tests/baselines/reference/extendsClauseAlreadySeen2.errors.txt
==== tests/cases/compiler/extendsClauseAlreadySeen2.ts (3 errors) ====
    class C<T> {
    
    }
    class D<T> extends C<number> extends C<string> {
                                 ~~~~~~~
!!! error TS1005: '{' expected.
                                         ~~~~~~~~~~~
                                           ~~~~~~
!!! error TS2304: Cannot find name 'string'.
        baz() { }
    ~~~~~~~~~~~~~
    }
    ~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and '{ baz: () => void; }'.